syntax = "proto2";

package org.jetbrains.jpsservice;

option java_package = "org.jetbrains.jps.api";
option optimize_for = LITE_RUNTIME;

message Message {
  message UUID {
    required sint64 most_sig_bits = 1;
    required sint64 least_sig_bits = 2;
  }

  message KeyValuePair {
    required string key = 1;
    required string value = 2;
  }

  enum Type {
    CONTROLLER_MESSAGE = 1;
    BUILDER_MESSAGE = 2;
    FAILURE = 3;
  }

  message Failure {
    optional int32 error_code = 1;
    optional string description = 2;
    optional string stacktrace = 3;
  }

  message ControllerMessage {
    enum Type {
      BUILD_PARAMETERS = 1;
      CANCEL_BUILD_COMMAND = 2;
      FS_EVENT = 3;
      CONSTANT_SEARCH_RESULT = 4;
    }

    message FSEvent {
      required uint64 ordinal = 1;
      repeated string changed_paths = 2;
      repeated string deleted_paths = 3;
    }

    message GlobalSettings {
      required string global_options_path = 5;
    }

    message ParametersMessage {
      message TargetTypeBuildScope {
        required string type_id = 1;
        optional bool all_targets = 2;
        repeated string target_id = 3;
        required bool force_build = 4;
      }

      enum Type {
        BUILD = 1;
        CLEAN = 2;
        UP_TO_DATE_CHECK = 3;
      }

      required Type build_type = 1;
      optional GlobalSettings global_settings = 2;
      optional string project_id = 3;
      repeated TargetTypeBuildScope scope = 4;
      repeated string file_path = 5;
      repeated KeyValuePair builder_parameter = 6;
      optional CacheDownloadSettings cache_download_settings = 7;
    }

    message ConstantSearchResult {
      required string owner_class_name = 1;
      required string field_name = 2;
      required bool is_success = 3;
      repeated string path = 4;
    }

    message CacheDownloadSettings {
      map<string, string> auth_headers = 1;
      required string download_commit = 2;
      required int32 commits_count_latest_build = 3;
      required string server_url = 4;
      required int64 decompression_speed = 5;
      required int64 deletion_speed = 6;
      required bool force_download = 7;
      required bool disable_download = 8;
      required int32 max_download_duration = 9;
      required bool cleanup_asynchronously = 10;
    }

    required Type type = 1;
    optional ParametersMessage params_message = 2;
    optional FSEvent fs_event = 3;
    optional ConstantSearchResult constant_search_result = 4;
  }

  message BuilderMessage {
    enum Type {
      PARAM_REQUEST = 1;
      BUILD_EVENT = 2;
      COMPILE_MESSAGE = 3;
      CONSTANT_SEARCH_TASK = 4;
      CACHE_DOWNLOAD_MESSAGE = 5;
      SAVE_LATEST_DOWNLOAD_STATISTIC_MESSAGE = 6;
      SAVE_LATEST_BUILT_COMMIT_MESSAGE = 7;
    }

    message BuildEvent {
      enum Type {
        BUILD_COMPLETED = 1;
        FILES_GENERATED = 2;
        CUSTOM_BUILDER_MESSAGE = 3;
      }

      enum Status {
        CANCELED = 1;
        ERRORS = 2;
        SUCCESS = 3;
        UP_TO_DATE = 4;
      }

      message GeneratedFile {
        required string output_root = 1;
        required string relative_path = 2;
      }

      message CustomBuilderMessage {
        required string builder_id = 1;
        required string message_type = 2;
        required string message_text = 3;
      }

      required Type event_type = 1;
      optional string description = 2;
      optional Status completion_status = 3;
      repeated GeneratedFile generated_files = 4;
      optional CustomBuilderMessage custom_builder_message = 5;
    }

    message CompileMessage {
      enum Kind {
        ERROR = 1;
        WARNING = 2;
        INFO = 3;
        PROGRESS = 4;
        JPS_INFO = 5;
        OTHER = 6;
        INTERNAL_BUILDER_ERROR = 7;
      }
      required Kind kind = 1;
      optional string text = 2;
      optional string source_file_path = 3;
      optional uint64 problem_begin_offset = 4;
      optional uint64 problem_end_offset = 5;
      optional uint64 problem_location_offset = 6;
      optional uint64 line = 7;
      optional uint64 column = 8;
      optional float  done = 9;
      repeated string module_names = 10;
    }

    message ConstantSearchTask {
      required string owner_class_name = 1;
      required string field_name = 2;
      required int32 access_flags = 3;
      optional bool is_access_changed = 4 [default = false];
      optional bool is_field_removed = 5  [default = false];
    }

    message CacheDownloadMessage {
      required string description_text = 2;
      optional float  done = 9;
    }

    message CommitAndDownloadStatistics {
      required string commit = 1;
      optional int64 decompression_speed = 2;
      optional int64 deletion_speed = 3;
    }

    required Type type = 1;
    optional BuildEvent build_event = 2;
    optional CompileMessage compile_message = 3;
    optional ConstantSearchTask constant_search_task = 4;
    optional CacheDownloadMessage cache_download_message = 5;
    optional CommitAndDownloadStatistics commit_and_download_statistics = 6;
  }

  required UUID session_id = 1;
  required Type type = 2;
  optional ControllerMessage controller_message = 3;
  optional BuilderMessage builder_message = 4;
  optional Failure failure = 5;
}